3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/shop.c, include/sproto.h: Add is_in_shop() and coords_in_shop()
   based on addition of is_in_shop() in cf+ by elmex.
server/apply.c: When applying a transport which is in an inventory, drop
   the transport.
server/c_object.c, include/sproto.h: Make drop_object return a pointer to
   the dropped object, NULL otherwise.
Alex Schultz 2006-09-09

common/treasure.c: add exp and other_arch to flesh; more info about
   the original monster, to be used in spells or scripts.
Lalo Martins 2006-09-10

doc/Developers/protocol: Fix off by one on how many layers are currently
   defined.
server/swap.c: When loading up temp maps, make sure timeout is set to 0 -
  fixes bug 1539203.
MSW 2006-09-06

lib/collect.pl.in: Explicitly ignore backup files (*~), just because they
   really annoy me.
Lalo Martins 2006-09-06

server/gods.c: Make get_god_for_race() safe for gods of no race.
Alex Schultz 2006-09-06

server/shop.c: Make (real) sure shops won't give amber/jade
Lalo Martins 2006-09-06

Apply patch #551467 (type mismatch in surround_flag3() can cause SIGSEGV)
 courtesy Mark Kidder.
 random_maps/rproto.h wall.c 
Ryo 2006-09-04

Bulk of this change is updating some files to use draw_ext_info() - all
   future code should use this, since there is no real reason not to and
   it provides additional features.  One notable change - reversed the
   order of the new and old formats in draw_ext_info_format() - the
   order was different than that of draw_ext_info(), which leads to confusion.
   draw_ext_info_format() wasn't used in many places, so easier to change
   that than all the draw_ext_info() calls.  Only another 1200