@@ -17,6 +17,8 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+server/apply.c, server/c_object.c, server/player.c: Use is_in_shop() to
+   check if it's in a a shop.
 server/shop.c, include/sproto.h: Add is_in_shop() and coords_in_shop()
    based on addition of is_in_shop() in cf+ by elmex.
 server/apply.c: When applying a transport which is in an inventory, drop
